--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,11 @@ python:
 
 install: pip install -r requirements.txt
 
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
+
 script: python Jonsbo/main.py
+
+services:
+  - MongoDB
