--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install: pip install -r requirements.txt
 #  - sleep 15
 #  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
-script: python Jonsbo/main.py
+script: python3 Phanteks/main.py
 
 #services:
 #  - MongoDB
