--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ install: pip install -r requirements.txt
 #  - sleep 15
 #  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
-script: python3 Phanteks/main.py
+script:
+ - python3 Phanteks/main.py
+ - python3 NZXT/getProductData.py
 
 #services:
 #  - MongoDB
