--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-beautifulsoup4==4.6.0
-certifi==2018.4.16
-chardet==3.0.4
-idna==2.6
-lxml==4.2.1
-pymongo==3.6.1
-requests==2.18.4
-urllib3==1.22
+beautifulsoup4
+certifi
+chardet
+idna
+lxml
+pymongo
+requests
+urllib3
